# historical-dd-automation

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
